[gd_scene load_steps=3 format=3 uid="uid://16dpqo8fyq4a"]

[ext_resource type="Script" path="res://addons/UDSEngine/Example Game/MainMenu.gd" id="1"]
[ext_resource type="Theme" uid="uid://c521sxmdt64pl" path="res://addons/UDSEngine/Database_Manager/Theme and Style/main_30.tres" id="1_0ty4t"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("1_0ty4t")
script = ExtResource("1")

[node name="BackgroundColor" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="VBox1" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox1" type="VBoxContainer" parent="VBox1"]
offset_right = 900.0
offset_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GameTitle" type="Label" parent="VBox1/VBox1"]
offset_right = 900.0
offset_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Generic Title Screen"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBox2" type="VBoxContainer" parent="VBox1"]
offset_top = 302.0
offset_right = 900.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBox1" type="HBoxContainer" parent="VBox1/VBox2"]
offset_right = 900.0
offset_bottom = 92.0
size_flags_horizontal = 3

[node name="HBox1" type="HBoxContainer" parent="VBox1/VBox2/HBox1"]
offset_right = 387.0
offset_bottom = 92.0
size_flags_horizontal = 3

[node name="VBox1" type="VBoxContainer" parent="VBox1/VBox2/HBox1"]
offset_left = 391.0
offset_right = 509.0
offset_bottom = 92.0

[node name="NewGame" type="Button" parent="VBox1/VBox2/HBox1/VBox1"]
offset_right = 118.0
offset_bottom = 28.0
text = "NEW GAME"

[node name="LoadGame" type="Button" parent="VBox1/VBox2/HBox1/VBox1"]
offset_top = 32.0
offset_right = 118.0
offset_bottom = 60.0
text = "LOAD GAME"

[node name="LoadGame2" type="Button" parent="VBox1/VBox2/HBox1/VBox1"]
offset_top = 64.0
offset_right = 118.0
offset_bottom = 92.0
text = "EXIT"

[node name="HBox2" type="HBoxContainer" parent="VBox1/VBox2/HBox1"]
offset_left = 513.0
offset_right = 900.0
offset_bottom = 92.0
size_flags_horizontal = 3

[connection signal="button_up" from="VBox1/VBox2/HBox1/VBox1/NewGame" to="." method="_on_NewGame_button_up"]
[connection signal="button_up" from="VBox1/VBox2/HBox1/VBox1/LoadGame" to="." method="_on_LoadGame_button_up"]
[connection signal="button_up" from="VBox1/VBox2/HBox1/VBox1/LoadGame2" to="." method="_on_LoadGame2_button_up"]
